welcome code highlight

--- a/_posts/2016-7-30-Welcome.md
+++ b/_posts/2016-7-30-Welcome.md
@@ -11,8 +11,14 @@ var hello = function() {
 ```
 helo;;;
 
+```PHP
+ public function Hello() {
+     print(0.3);
+ }
 ```
-public function Hello() {
-    print(0.3);
-}
+
+```javascript
+ public function Hello() {
+     print(0.3);
+ }
 ```
