--- a/_posts/2016-7-30-Welcome.md
+++ b/_posts/2016-7-30-Welcome.md
@@ -11,14 +11,16 @@ var hello = function() {
 ```
 helo;;;
 
-```PHP
+```php
  public function Hello() {
-     print(0.3);
+    $test = '1';
+    print(0.3);
  }
 ```
 
 ```javascript
  public function Hello() {
-     print(0.3);
+    $test = '1';
+    print(0.3);
  }
 ```
