welcome code highlight

--- a/_posts/2016-7-30-Welcome.md
+++ b/_posts/2016-7-30-Welcome.md
@@ -14,13 +14,27 @@ helo;;;
 ```php
  public function Hello() {
     $test = '1';
-    print(0.3);
+    print('php');
  }
 ```
 
 ```javascript
  public function Hello() {
     $test = '1';
-    print(0.3);
+    print('js');
+ }
+```
+
+```ruby
+ public function Hello() {
+    $test = '1';
+    print(ruby);
+ }
+```
+
+```python
+ public function Hello() {
+    $test = '1';
+    print(ruby);
  }
 ```
