welcome code highlight

--- a/_posts/2016-7-30-Welcome.md
+++ b/_posts/2016-7-30-Welcome.md
@@ -11,7 +11,7 @@ var hello = function() {
 ```
 helo;;;
 
-```php
+```PHP
  public function Hello() {
     $test = '1';
     print('php');
@@ -35,6 +35,6 @@ helo;;;
 ```python
  public function Hello() {
     $test = '1';
-    print(ruby);
+    print(python);
  }
 ```
