--- a/_posts/2016-7-30-Welcome.md
+++ b/_posts/2016-7-30-Welcome.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: hello cgfasdasd!
+title: test highlight!
 
 ---
 
@@ -9,9 +9,8 @@ var hello = function() {
     // TODO
 }
 ```
-helo;;;
 
-```PHP
+```php
  public function Hello() {
     $test = '1';
     print('php');
